[metadata]
name = coingecko-price
version = 0.0.1
author = Joshua Allen
author_email = joshualallen@gmail.com
description = A wrapper for the CoinGecko api to fetch a single historical price
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshallen64/coingeckoprice
project_urls =
    Bug Tracker = https://github.com/joshallen64/coingeckoprice/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src